Fix sharing preference between Linux and ChromeOS on Linux

Build of ChromeOS running on Linux may share preference with
the Linux build of Chrome. Ensure that the migration state is
set to MIGRATION_NOT_STARTED on ChromeOS.

Bug: 879968
Change-Id: Ifff879198a51555c6a88c5c2a5712160745c64f6
Reviewed-on: https://chromium-review.googlesource.com/1202103
Reviewed-by: David Roger <droger@chromium.org>
Commit-Queue: Sylvain Defresne <sdefresne@chromium.org>
Cr-Commit-Position: refs/heads/master@{#588400}
Former-commit-id: 95a5632f65689e2923928a539ea8db2a8830b418